# get-rich-slow

./: Cargo.toml  README.md
nordigen-helper/: 01_get_access_token.sh  02_find_bank.py  03_get_bank_login_link.py  04_list_bank_accounts.py  10_list_requisitions.py
src/: account.rs  api.rs  asset.rs  config.rs  cryptoprice.rs  domainconfig.rs  error.rs  ethereum.rs  growth.rs  kraken.rs  main.rs  nordigen.rs  scalable.rs
src/blockchain/: abi.rs  alpaca.rs  benqi.rs  defiasset.rs  mod.rs  venus.rs
